Adicionando logica do carrinho

--- a/LanchesMac/Views/CarrinhoCompra/Index.cshtml
+++ b/LanchesMac/Views/CarrinhoCompra/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="container">
 <div class="row">
 
-    <img src="~/images/carrinho.jpg" />
+    <img src="~/images/trash.png" />
     <div>
         <h4>Seu Carrinho de compras : </h4>
     </div>
