--- a/LanchesMac/Views/Shared/_LanchesResumo.cshtml
+++ b/LanchesMac/Views/Shared/_LanchesResumo.cshtml
@@ -4,7 +4,19 @@
 
     <p><img src="@Model.ImagemUrl" / class="img-fluid"></p>
     <h3>Preco : @Model.Preco.ToString("c")</h3>
-    <h4>Lanche : @Model.Nome</h4>
+    
+    <a asp-controller="Lanche" asp-action="Details"
+    asp-route-lancheId="@Model.LancheId">@Model.Nome</a>
+
     <p>@Model.DrescricaoCurta</p>
 
+    <div>
+        <p class="button">
+            <a class="btn btn-primary" id="cartButton" asp-controller="CarrinhoCompra"
+               asp-action="AdicionarItemNoCarrinhoCompra" asp-route-LancheId="@Model.LancheId">
+               incluir no carrinho
+            </a>
+        </p>
+
+    </div>
 </div>
